# comicbookshopdetector

./: README.md  comicfinder.js  find-stores.js  finder.html  get-photo.js  index.html  recommender.html  styles.css
api/: find-stores.js  get-photo.js
frontend/: about.html  comicfinder.js  finder.html  index.html  package.json  recommender.html  releases.html  styles.css
frontend/api/: find-stores.js  test-api.js
gateway-java/: Dockerfile
ml-python/: Dockerfile  main.py
phash-cpp/: CMakeLists.txt  Dockerfile  main.cpp
